2000-02-18  Maciej Stachowiak  <mjs@eazel.com>

	* modules/file-method.c (do_get_file_info,
	do_get_file_info_from_handle): Use gnome_vfs_extract_short_name on
	the URI rather than g_basename on the filename to get the
	basename. g_basename is broken.

2000-02-17  Jonathan Blandford  <jrb@redhat.com>

	* modules/default-modules.conf (ghelp): add ghelp to the list of
	known domains.

2000-02-16  Elliot Lee  <sopwith@redhat.com>
	* test/test-async.c: Exit after receiving read(), no matter what result is received.
	* modules/pipe-method.c: Check fread() result for being > 0, not !EOF
	* libgnomevfs/gnome-vfs-uri.c: Don't add leading /
	* libgnomevfs/gnome-vfs-backend.c: Add assert to ensure initialization.
	* modules/default-methods.conf: Pass filename to gnome-man2html2 instead of redirecting
	it as input.

2000-02-15  John Sullivan  <sullivan@eazel.com>

	* libgnomevfs/gnome-vfs-configuration.c:
	(gnome_vfs_configuration_get_module_path): Just clarified an
	error message.

2000-02-14  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-types.h: Added a GnomeVFSFIleInfoFields
	enumeration, and added a field of this type (valid_fields) to
	GnomeVFSFileInfo, so that cases where get_file_info returns
	incomplete information can be handled gracefully.
	* modules/extfs-method.c, modules/file-method.c,
	modules/ftp-method.c, modules/http-method.c,
	modules/module-shared.c, modules/pipe-method.c,
	modules/translate-method.c: Set the valid_fields

2000-02-09  Elliot Lee  <sopwith@redhat.com>

	* libgnomevfs/gnome-vfs-messages.c, libgnomevfs/gnome-vfs-method.c,
	libgnomevfs/gnome-vfs-process.c, libgnomevfs-corba/gnome-vfs-async-ops.c,
	libgnomevfs-corba/gnome-vfs-slave-launch.c, libgnomevfs-corba/gnome-vfs-slave-notify.c,
	libgnomevfs-corba/gnome-vfs-slave-process.c, modules/ftp-method.c: Remove excess
	debugging output.

	* libgnomevfs/gnome-vfs-handle.c, libgnomevfs/gnome-vfs-handle.h,
	libgnomevfs/gnome-vfs-ops.c, libgnomevfs/gnome-vfs-ops.h,